# Metadrive-Ros-integration

./: .gitignore  1_comand_terminal.bash  2_comand_terminal.bash  3_comand_terminal.bash  README.md  config.json  eval_model.bash  eval_model.py  setup_ros_metadrive_bridge.bash  setup_vision_msgs_ws.bash  start_project_config.bash  train_model.bash  train_model.py
bridges/ros_bridge/: backup.py  config.json  models_training.py  ros_socket_server.py
bridges/ros_bridge/src/metadrive_example_bridge/: setup.py
bridges/ros_bridge/src/metadrive_example_bridge/launch/: metadrive_example_bridge.launch.py
bridges/ros_bridge/src/metadrive_example_bridge/metadrive_example_bridge/: cmd_vel_bridge.py  lidar_bridge.py  state_and_lidar_bridge.py
callback/: training_callback.py
config/: setup_ros_metadrive_bridge.bash  setup_vision_msgs_ws.bash
env/: custom_meta_env.py
metadrive/bridges/ros_bridge/: models_evaluation.py
metadrive/bridges/ros_bridge/src/metadrive_example_bridge/metadrive_example_bridge/: camera_bridge.py  obj_bridge.py  state_and_lidar_bridge.py
nets/: custom_cnn.py
obs/: custom_obs.py
robotic_project/log/: latest_build
robotic_project/src/metadrive_controller/: package.xml  setup.cfg  setup.py
robotic_project/src/metadrive_controller/metadrive_controller/: main.py
