<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>metadrive_controller</name>
  <version>0.0.0</version>
  <description>Un pacchetto per controllare i sensori di MetaDrive in ROS 2</description>
  <maintainer email="tuamail@esempio.com">Tuo Nome</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
